--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/CXLB/QZZPCX.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/CXLB/QZZPCX.css
@@ -56,11 +56,11 @@
 /*首页_主体_左部*/
 .div_body .div_body_left{display: inline-block;width: 980px;height: 1760px;background-color: #ffffff;float: left;}
 .div_body .div_body_left .ul_body_left{ width: 100%;padding: 0;}
-.div_body .div_body_left .ul_body_left .li_body_left{ width: 100%;height: 155px;border-bottom: 1px solid #e6e6e6;padding: 10px;}
+.div_body .div_body_left .ul_body_left .li_body_left{ width: 100%;height: 155px;border-bottom: 1px solid #e6e6e6;padding: 10px;cursor: pointer;}
 .div_body .div_body_left .ul_body_left .li_body_left:hover{ background-color: #f9f9f9;}
+.div_body .div_body_left .ul_body_left .li_body_left:hover .span_li_body_left_bt{color: #ef6100;text-decoration: underline;}
 .div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_left{width: 450px;height: 155px;float: left;display: inline-block;position: relative;padding: 6px;}
 .div_body .div_body_left .ul_body_left .li_body_left .p_div_li_body_left_left_bt{ font-size: 18px;font-weight: 700;}
-.div_body .div_body_left .ul_body_left .li_body_left .p_div_li_body_left_left_bt:hover{ cursor: pointer;color: #5bc0de;text-decoration: underline;}
 .div_body .div_body_left .ul_body_left .li_body_left .p_div_li_body_left_left_xz{ color: #ef6100;font-size: 16px;font-weight: 700;}
 .div_body .div_body_left .ul_body_left .li_body_left .p_div_li_body_left_left_fl{font-size: 12px;color: #5bc0de;}
 .div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_center{ width: 300px;padding: 10px;float: left;display: inline-block;}
