--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SWFW/SWFW_ZK.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SWFW/SWFW_ZK.cshtml
@@ -60,7 +60,7 @@
         </div>
         <div id="divFWQY" class="div_row" style="z-index: 996">
             <div class="div_row_left">
-                <span class="span_required">*</span>
+                <span class="span_required">&nbsp;</span>
                 <span id="spanFWQY">服务区域</span>
             </div>
             <div class="div_row_right">
