--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES/ES_QTES_ESSB.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES/ES_QTES_ESSB.cshtml
@@ -26,9 +26,9 @@
                     <img class="img_radio" id="img_sf_sjzr"/><label class="label_radio">商家转让</label>
                 </div>
             </div>
-            <div id="divGQTip" class="Warn" style="z-index: 996; position: relative;"></div>
+            <div id="divGQTip" class="Warn" style="z-index: 999; position: relative;"></div>
         </div>
-        <div id="divESSBLB" class="div_row" style="z-index: 999">
+        <div id="divESSBLB" class="div_row" style="z-index: 998">
             <div class="div_row_left" style="margin-left: 128px;">
                 <span class="span_required">*</span>
                 <span class="spanFWCZ">类别</span>
@@ -52,15 +52,15 @@
                     </div>
                 </div>
             </div>
-            <div id="divESSBLBTip" class="Warn" style="z-index: 996; position: relative;"></div>
+            <div id="divESSBLBTip" class="Warn" style="z-index: 997; position: relative;"></div>
         </div>
-        <div id="divXJCD" class="div_row" style="z-index: 993;">
+        <div id="divXJCD" class="div_row" style="z-index: 996;">
             <div class="div_row_left" style="margin-left: 128px;">
                 <span class="span_required">*</span>
                 <span class="spanFWCZ">新旧</span>
             </div>
             <div class="div_row_right">
-                <div id="divXJText" class="div_select_out SRK" style="z-index: 997;">
+                <div id="divXJText" class="div_select_out SRK" style="z-index: 995;">
                     <div id="divXJSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                         <span id="spanXJ" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择新旧</span>
                         <div class="span_select_arrow"></div>
@@ -69,9 +69,9 @@
                     </div>
                 </div>
             </div>
-            <div id="divXJCDTip" class="Warn" style="z-index: 996; position: relative;"></div>
+            <div id="divXJCDTip" class="Warn" style="z-index: 994; position: relative;"></div>
         </div>
-        <div id="divJG" class="div_row" style="z-index: 992;">
+        <div id="divJG" class="div_row" style="z-index: 993;">
             <div class="div_row_left" style="margin-left: 102px;">
                 <span class="span_required">*</span>
                 <span class="spanFWCZ">转让价格</span>
@@ -90,7 +90,7 @@
                 <span class="spanFWCZ">交易地点</span>
             </div>
             <div class="div_row_right">
-                <div id="divQYText" class="div_select_out SRK" style="z-index: 997;">
+                <div id="divQYText" class="div_select_out SRK" style="z-index: 990;">
                     <div id="divQYSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                         <input type="hidden" id="QYCode"/>
                         <span id="spanQY" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择区域</span>
@@ -99,7 +99,7 @@
                     <div id="divQY" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                     </div>
                 </div>
-                <div id="divDDText" class="div_select_out SRK" style="z-index: 997;">
+                <div id="divDDText" class="div_select_out SRK" style="z-index: 989;">
                     <div id="divDDSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                         <span id="spanDD" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择地段</span>
                         <div class="span_select_arrow"></div>
@@ -108,7 +108,7 @@
                     </div>
                 </div>
             </div>
-            <div id="divSZQYTip" class="Warn" style="z-index: 992; position: relative;"></div>
+            <div id="divSZQYTip" class="Warn" style="z-index: 988; position: relative;"></div>
         </div>
         <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
             <span class="span_split">详细信息</span>
@@ -124,7 +124,7 @@
                 <div id="divBTTip"></div>
             </div>
         </div>
-        <div id="divBCMS" class="div_row" style="height: 253px;">
+        <div id="divBCMS" class="div_row" style="height: 253px;z-index: 987">
             <div class="div_row_left" style="height: 170px; vertical-align: top;">
                 <span class="span_required" style="vertical-align: top">*</span>
                 <span id="spanBCMS" style="vertical-align: top">补充描述</span>
@@ -172,7 +172,7 @@
             <span class="span_split">联系人信息</span>
             <em class="em_split"></em>
         </div>
-        <div id="divLXR" class="div_row" style="z-index: 993">
+        <div id="divLXR" class="div_row" style="z-index: 987">
             <div class="div_row_left" style="margin-left: 114px;">
                 <span class="span_required">*</span>
                 <span id="spanLXDH">联系人</span>
@@ -182,7 +182,7 @@
                 <div id="divLXRTip"></div>
             </div>
         </div>
-        <div id="divLXDH" class="div_row" style="z-index: 993">
+        <div id="divLXDH" class="div_row" style="z-index: 986">
             <div class="div_row_left">
                 <span class="span_required">*</span>
                 <span id="spanLXDH">联系电话</span>
@@ -192,7 +192,7 @@
                 <div id="divLXDHTip"></div>
             </div>
         </div>
-        <div id="divQQ" class="div_row" style="margin-top: -12px;" style="z-index: 993">
+        <div id="divQQ" class="div_row" style="margin-top: -12px;" style="z-index: 985">
             <div class="div_row_left" style="margin-left: 133px;">
                 <span class="span_required"></span>
                 <span id="spanQQ">QQ</span>
