--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/Head.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/Head.css
@@ -1,5 +1,5 @@
 ﻿/*首页_头部*/
-.div_head {background-color: #ffffff;width: 1200px;height: 100px;padding-top: 10px;}
+.div_head {background-color: #ffffff;width: 1200px;height: 130px;padding-top: 10px;font-family: "宋体"}
 
 /*首页_头部_左侧*/
 .div_head_left {float: left;width: 120px;margin-top: 5px;}
@@ -9,14 +9,14 @@
 .div_head_right {float: right;width: 1080px;margin-top: 5px;}
 .div_head_right .ul_head_right {width: 450px;height: 80px;display: block;float: left;margin-top: 20px;vertical-align: middle;}
 .div_head_right .ul_head_right .li_head_right {width: 130px;color: white;height: 40px;font-size: 16px;display: inline;margin-left: 30px;cursor: pointer;}
-.div_head_right .div_head_right_ss {display: inline-block;width: 600px;height: 80px;float: left;margin-left: 200px;}
-.div_head_right .div_head_right_ss .span_spaninput_out {border: none;display: block;width: 500px;height: 40px;font-size: 14px;margin-top: 10px;}
-.div_head_right .div_head_right_ss .span_spaninput_out .span_spaninput_in {border: 1px solid #5bc0de;display: inline-block;width: 410px;height: 40px;font-size: 14px;padding: 6px 12px;}
-
-.div_head_right .div_head_right_ss .span_head_right_ss {font-size: 12px;color: #999;cursor: pointer;margin-left: 4px;}
+.div_head_right .div_head_right_ss {display: inline-block;width: 600px;height: 80px;float: left;margin-left: 150px;}
+.div_head_right .div_head_right_ss .span_spaninput_out {border: none;display: block;width: 630px;height: 40px;font-size: 14px;margin-top: 10px;margin-bottom: 10px;}
+.div_head_right .div_head_right_ss .span_spaninput_out .span_spaninput_in {border: 2px solid #5bc0de;display: inline-block;width: 500px;height: 40px;font-size: 14px;padding: 6px 12px;}
+.div_head_right .div_head_right_ss .span_head_right_ss {font-size: 14px;color: #999;cursor: pointer;margin-left: 4px;}
 .div_head_right .div_head_right_ss .span_head_right_ss:hover {color: #ef6100;}
-.div_head_right .div_head_right_ss .span_spaninput_out .span_ss {width: 90px;height: 40px;background: #5bc0de;float: right;display: inline-block;color: #fff;font-size: 16px;padding: 6px 26px;cursor: pointer;}
-.div_head_right .span_fbxx {width: 180px;border: 1px solid #5bc0de;height: 40px;background: #5bc0de;float: left;display: inline-block;color: #fff;font-size: 16px;padding-top: 6px;text-align: center;cursor: pointer;margin-top: 10px;margin-left: 10px;}
+.div_head_right .div_head_right_ss .span_head_right_ss_split{ color: #999;}
+.div_head_right .div_head_right_ss .span_spaninput_out .span_ss {width: 130px;font-family: "微软雅黑";height: 40px;background: #5bc0de;float: right;display: inline-block;color: #fff;font-size: 18px;font-weight: 700;padding: 6px 46px;cursor: pointer;}
+.div_head_right .span_fbxx {width: 180px;font-family: "微软雅黑";border: 1px solid #5bc0de;height: 40px;background: #5bc0de;float: left;display: inline-block;color: #fff;font-size: 16px;padding-top: 6px;text-align: center;cursor: pointer;margin-top: 10px;margin-left: 60px;}
 .div_head_right .span_fbxx:hover {background: #31b0d5;}
 
 
