--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Other/SY.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Other/SY.css
@@ -7,16 +7,17 @@
 .div_body .div_body_top .div_body_top_inner .ul_body_top .li_body_top{ width: 120px;float: left;cursor: pointer;}
 .div_body .div_body_top .div_body_top_inner .ul_body_top .li_body_top .p_body_top_left_dl{padding-left: 10px;}
 .div_body .div_body_top .div_body_top_inner .ul_body_top .li_body_top:hover .p_body_top_left_dl{ cursor: pointer;color: #ef6100;text-decoration: underline;}
-.div_body .div_body_top .div_body_top_inner .ul_body_top .li_body_top .i_body_top_left{ width: 100px;height: 100px;margin-left: 10px;margin-right: 10px;text-align:center;display: block;background-size: 100%; }
+.div_body .div_body_top .div_body_top_inner .ul_body_top .li_body_top .img_body_top{ width: 100px;height: 100px;margin-left: 10px;margin-right: 10px;text-align:center;display: block;background-size: 100%; }
+.div_body .div_body_top .div_body_top_inner .ul_body_top .li_body_top .img_body_top:hover{ transform: scale(1.08);}
 .div_body .div_body_top .div_body_top_inner .ul_body_top .li_body_top .p_body_top_left{display: block;text-align: center;margin: 0;width: 120px;}
 .div_body .div_body_top .div_body_top_inner .ul_body_top .li_body_top .span_body_top_left{font-size: 12px;color: #999;display: inline-block;text-align: center;}
 .div_body .div_body_top .div_body_top_inner .ul_body_top .li_body_top .span_body_top_left_xl:hover{ cursor: pointer;color: #ef6100;text-decoration: underline;}
 
 /*首页_主体_中部*/
 .div_body .div_body_middle{ width: 1200px;overflow-x: hidden;}
-.div_body .div_body_middle .div_body_middle_left{width: 292px;height: 1300px;margin-top: 10px;margin-right: 10px;display: inline-block;float: left;background: #ffffff;}
-.div_body .div_body_middle .div_body_middle_left .div_body_middle_left_section { width: 292px;height: auto;display: block; padding: 10px 20px;float: left;}
-.div_body .div_body_middle .div_body_middle_left .div_body_middle_left_section .p_body_middle_left_title{font-size: 18px;font-weight: 700;border-bottom: 1px solid #cccccc;display: block;height: 40px;color: #5bc0de;}
+.div_body .div_body_middle .div_body_middle_left{width: 280px;height: 1300px;margin-top: 10px;margin-right: 10px;display: inline-block;float: left;background: #ffffff;padding: 10px;}
+.div_body .div_body_middle .div_body_middle_left .div_body_middle_left_section { width: 260px;height: auto;display: block;float: left;}
+.div_body .div_body_middle .div_body_middle_left .div_body_middle_left_section .p_body_middle_left_title{font-size: 26px;border-bottom: 2px solid #5bc0de;display: block;height: 52px;color: #333333;}
 .div_body .div_body_middle .div_body_middle_left .div_body_middle_left_section .p_body_middle_left_title_small{font-size: 12px;color: #999999;display: block;height: 25px;}
 .div_body .div_body_middle .div_body_middle_left .div_body_middle_left_section .ul_body_middle_left_section{display: block;padding: 0;height: 30px;}
 .div_body .div_body_middle .div_body_middle_left .div_body_middle_left_section .ul_body_middle_left_section .li_body_middle_left_section{display: inline-block;width: 80px;height: 30px;font-size: 14px;float: left;}
