--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
@@ -29,61 +29,61 @@
                 <ul class="ul_body_top">
                     <li class="li_body_top">
                         <p class="p_body_top_left">
-                            <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_fc2.png")"/>
+                            <img class="img_body_top" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_fc2.png")"/>
                         </p>
                         <p class="p_body_top_left p_body_top_left_dl">房产</p>
                     </li>
                     <li class="li_body_top">
                         <p class="p_body_top_left">
-                            <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_cl4.png")" />
+                            <img class="img_body_top" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_cl4.png")" />
                         </p>
                         <p class="p_body_top_left p_body_top_left_dl">车辆</p>
                     </li>
                     <li class="li_body_top">
                         <p class="p_body_top_left">
-                            <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_zp2.png")"/>
+                            <img class="img_body_top" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_zp2.png")"/>
                         </p>
                         <p class="p_body_top_left p_body_top_left_dl">招聘</p>
                     </li>
                     <li class="li_body_top">
                         <p class="p_body_top_left">
-                            <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_cw2.png")"/>
+                            <img class="img_body_top" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_cw2.png")"/>
                         </p>
                         <p class="p_body_top_left p_body_top_left_dl">宠物</p>
                     </li>
                     <li class="li_body_top">
                         <p class="p_body_top_left">
-                            <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_es2.png")"/>
+                            <img class="img_body_top" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_es2.png")"/>
                         </p>
                         <p class="p_body_top_left p_body_top_left_dl">二手市场</p>
                     </li>
                     <li class="li_body_top">
                         <p class="p_body_top_left">
-                            <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_shfw3.png")"/>
+                            <img class="img_body_top" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_shfw3.png")"/>
                         </p>
                         <p class="p_body_top_left p_body_top_left_dl">生活服务</p>
                     </li>
                     <li class="li_body_top">
                         <p class="p_body_top_left">
-                            <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_swfw2.png")"/>
+                            <img class="img_body_top" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_swfw2.png")"/>
                         </p>
                         <p class="p_body_top_left p_body_top_left_dl">商务服务</p>
                     </li>
                     <li class="li_body_top">
                         <p class="p_body_top_left">
-                            <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_jypx3.png")"/>
+                            <img class="img_body_top" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_jypx3.png")"/>
                         </p>
                         <p class="p_body_top_left p_body_top_left_dl">教育培训</p>
                     </li>
                     <li class="li_body_top">
                         <p class="p_body_top_left">
-                            <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_pfcg2.png")"/>
+                            <img class="img_body_top" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_pfcg2.png")"/>
                         </p>
                         <p class="p_body_top_left p_body_top_left_dl">批发采购</p>
                     </li>
                     <li class="li_body_top">
                         <p class="p_body_top_left">
-                            <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_zsjm3.png")" />
+                            <img class="img_body_top" src="@Url.Content("~/Areas/Business/Css/images/SY/TBDH/body_top_zsjm3.png")" />
                         </p>
                         <p class="p_body_top_left p_body_top_left_dl">招商加盟</p>
                     </li>
@@ -292,7 +292,7 @@
     </div>
     <div id="div_Foot" class="div_foot">
         <div class="div_foot_left">
-            <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/logo_blue.png")" />
+            <img class="img_body_top" src="@Url.Content("~/Areas/Business/Css/images/logo_blue.png")" />
         </div>
         <div class="div_foot_right">
             <p class="p_div_foot_right">
